<resources>
    <string name="app_name">Exiu</string>
    <string name="tx_log_login">欢迎登录</string>
    <string name="tx_login_username">账号</string>
    <string name="username">请输入账号</string>
    <string name="tx_login_password">密码</string>
    <string name="password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="tx_register">注册</string>
    <string name="img_login_dsc">登录界面图片</string>
    <string name="tx_tel">手机号</string>
    <string name="tel">请输入手机号</string>
    <string name="btn_hqyzm">获取验证码</string>
    <string name="tx_yzm">验证码</string>
    <string name="hint_yzm">请输入验证码</string>
    <!--导航栏-->
    <string name="item_home">首页</string>
    <string name="item_search">搜索</string>
    <string name="item_publish">发布</string>
    <string name="item_mesage">消息</string>
    <string name="item_user">我的</string>
    <string name="exit">退出登陆</string>
    <!--publish-->
    <string name="publish_title">标题:</string>
    <string name="publish_content">内容描述:</string>
    <string name="publish_addimg">添加照片:</string>
    <string name="publish_content_hint">问题详情描述</string>
    <string name="publish_fenlei">问题分类：</string>

    <string name="test_text">测试文本测试文本测试文本测试文本测试文本测试文本
        测试文本测试文本测试文本测试文本测试文本测试文本
        测试文本测试文本测试文本测试文本测试文本测试文本测试文本</string>
    //个人详细信息页面
    <string name="head">头像:</string>
    <string name="userName">用户名:</string>
    <string name="passWord">密 码:</string>
    <string name="qianming">个性签名:</string>
    <string name="address">地址:</string>
    <string name="sex">性别:</string>
    <string name="stars">星级:</string>
    <string name="save">保存</string>
</resources>
